[gd_scene load_steps=3 format=2]

[ext_resource path="res://Objects/AddableTextBox/AddableTextBox.gd" type="Script" id=1]
[ext_resource path="res://Objects/AdaptiveTextBox/AdaptiveTextBox.tscn" type="PackedScene" id=2]

[node name="AddableTextBox" type="VBoxContainer"]
margin_right = 128.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="AddTextButton" type="Button" parent="."]
margin_right = 128.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 3
size_flags_vertical = 2
text = "add text"

[node name="TextBoxBlock" type="VBoxContainer" parent="."]
visible = false
margin_top = 24.0
margin_right = 128.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="TextBoxBlock"]
margin_right = 128.0
margin_bottom = 14.0
text = "Text"

[node name="HBoxContainer" type="HBoxContainer" parent="TextBoxBlock"]
margin_top = 18.0
margin_right = 128.0
margin_bottom = 48.0

[node name="AdaptiveTextBox" parent="TextBoxBlock/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 104.0

[node name="DeleteButton" type="Button" parent="TextBoxBlock/HBoxContainer"]
margin_left = 108.0
margin_right = 128.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 20 )
text = "X"

[connection signal="pressed" from="AddTextButton" to="." method="_on_add_text_button_pressed"]
[connection signal="pressed" from="TextBoxBlock/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
